--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="florida-county-census-analysis-and-map" class="level1">
 <h1>Florida County Census Analysis and Map:</h1>
-<p>Article Written by me:</p>
+</section>
+<section id="article-written-by-me" class="level1">
+<h1>Article written by me:</h1>
+<p>This <a href="https://laurenprentice.github.io/mywebsiteprentice/personal%20essay.html">link</a> will take you to the exam I wrote for my Nationalism class in my Fall semester of my junior year of college!</p>
 </section>
 
 </main>
