--- a/personal essay.html
+++ b/personal essay.html
@@ -60,7 +60,7 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p><a href="https://c12f7668939749288ee3ac66a09a3506.app.posit.cloud/p/83ddc230/">Home page</a></p>
+<p><a href="https://laurenprentice.github.io/mywebsiteprentice/index.html">Home Page</a></p>
 <section id="nationalism-final-exam" class="level2">
 <h2 class="anchored" data-anchor-id="nationalism-final-exam">Nationalism Final Exam</h2>
 <p>The Battle of Algiers is a movie that shows actions taken by rebel forces in Algiera to fight off French colonialism in North Africa. Throughout the film, different themes appear, such as community, equality and increased warfare. These themes relate to several theories we have discussed throughout the year. Anderson Benedict's theories help explain the Algerians’ imagined communities, Adria Lawrence explains how nationalism is created from a fight for equality, Barry Posen discusses how one must imitate warfare so their nation does not perish and the idea of ranked and unranked systems.&nbsp;</p>
