--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="hello" class="level1">
 <h1>Hello!</h1>
+<p>My name is Lauren Prentice. I’m a senior at GW. I study Political Science with a minor in Journalism and Mass Communication.</p>
 <p>Welcome to my webpage. Below you will find numerous links to different sources. These include:</p>
 <ol type="1">
 <li><p>My resume</p></li>
