--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="news-article" class="level1">
 <h1>News Article:</h1>
-<p>Linked is a news article about the issues students were having with the vexes on campus during Covid-19</p>
+<p><a href="https://laurenprentice.github.io/mywebsiteprentice/bus.html">Linked</a> is a news article about the issues students were having with the vexes on campus during Covid-19</p>
 </section>
 
 </main>
