hopefully this works

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Home Page</title>
+<title>resume</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,16 +23,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="index_files/libs/clipboard/clipboard.min.js"></script>
-<script src="index_files/libs/quarto-html/quarto.js"></script>
-<script src="index_files/libs/quarto-html/popper.min.js"></script>
-<script src="index_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="index_files/libs/quarto-html/anchor.min.js"></script>
-<link href="index_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="index_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="index_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="index_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="index_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="resume_files/libs/clipboard/clipboard.min.js"></script>
+<script src="resume_files/libs/quarto-html/quarto.js"></script>
+<script src="resume_files/libs/quarto-html/popper.min.js"></script>
+<script src="resume_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="resume_files/libs/quarto-html/anchor.min.js"></script>
+<link href="resume_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="resume_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="resume_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="resume_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="resume_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Home Page</h1>
+<h1 class="title">resume</h1>
 </div>
 
 
@@ -60,45 +60,10 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="hello" class="level1">
-<h1>Hello!</h1>
-<p><img src="Screen%20Shot%202023-12-14%20at%2011.14.57%20AM.png" class="img-fluid"></p>
-<p>My name is Lauren Prentice. I’m a senior at GW. I study Political Science with a minor in Journalism and Mass Communication.</p>
-<p>You can contact me at (727)-465-6962 or laurenprentice@gwu.edu</p>
-<p>Here is the link to my github: <a href="https://github.com/dashboard">Github Dashboard</a></p>
-<p>Welcome to my webpage. Below you will find numerous links to different sources. These include:</p>
-<ol type="1">
-<li><p>My resume</p></li>
-<li><p>An interactive county census analysis and map visualization of Florida</p></li>
-<li><p>A link to a writing sample</p></li>
-<li><p>A news article I have written</p></li>
-</ol>
-</section>
-<section id="resume" class="level1">
-<h1><sup>Resume:</sup></h1>
-<p>Below you will find my resume!</p>
+<p><a href="https://laurenprentice.github.io/mywebsiteprentice/index.html">Home page</a></p>
+<section id="resume" class="level2">
+<h2 class="anchored" data-anchor-id="resume">Resume:</h2>
 <p><img src="Screen%20Shot%202023-12-05%20at%207.48.50%20PM.png" class="img-fluid"></p>
-</section>
-<section id="florida-county-census-analysis-and-map" class="level1">
-<h1>Florida County Census Analysis and Map:</h1>
-<p>Here are the steps I took in order to find the data below:</p>
-<ol type="1">
-<li>The first step was to upload the census key so that all the data would be in PositCloud for me to pull from</li>
-<li>I then has to upload the median ages, income and population for the US so that the data would be properly uploaded</li>
-<li>I then pulled these different variables for Florida since that was my chosen state</li>
-<li>I did this by gathering the data from the 2017-2021 ACS, using the feature geometry from the census I was able to use simple feature collection to obtain only the data I needed</li>
-<li>I then was able to use the code to put it into map view</li>
-<li><img src="Screen%20Shot%202023-12-13%20at%205.12.36%20PM.png" class="img-fluid"></li>
-</ol>
-<p><img src="Screen%20Shot%202023-12-13%20at%205.10.56%20PM.png" class="img-fluid"></p>
-</section>
-<section id="article-written-by-me" class="level1">
-<h1>Article written by me:</h1>
-<p>This <a href="https://laurenprentice.github.io/mywebsiteprentice/personal%20essay.html">link</a> will take you to the exam I wrote for my Nationalism class in my Fall semester of my junior year of college!</p>
-</section>
-<section id="news-article" class="level1">
-<h1>News Article:</h1>
-<p><a href="https://laurenprentice.github.io/mywebsiteprentice/bus.html">Linked</a> is a news article about the issues students were having with the vexes on campus during Covid-19</p>
 </section>
 
 </main>
