--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="resume" class="level1">
 <h1><sup>Resume:</sup></h1>
-<p>Below you will find my resume!</p>
-<p><img src="Screen%20Shot%202023-12-05%20at%207.48.50%20PM.png" class="img-fluid"></p>
+<p>Here is my <a href="https://laurenprentice.github.io/mywebsiteprentice/resume.html">resume</a></p>
 </section>
 <section id="florida-county-census-analysis-and-map" class="level1">
 <h1>Florida County Census Analysis and Map:</h1>
